res/examples/invalid/divide_by_zero.eg
0 / 1;
1 / 0;
0 / 0;

// out: SyntaxError: can not divide by zero
// out: SyntaxError: can not divide by zero
// out: SyntaxError: can not divide by zero
// out: SyntaxError: can not divide by zero